# Data-Pipeline-Phases-3-

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
scripts/: build_aligned_dataset.py  build_arrow_dataset.py  build_dataset.py  diagnose.py  stats.py
src/asr_dataset/: __init__.py  agreement.py  alignment.py  chunking.py  confidence.py  config.py  filters.py  forced_align.py  io.py  manifest.py  pipeline.py  second_asr.py  types.py  vad.py
tests/: test_pipeline.py
